appdeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp
  labels:
    app: frontend
spec:
  selector:
    matchLabels:
      app: frontend
  replicas: 2
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: travel-container
          image: misterj25/letstravel-web-image:latest
          ports:
            - name: nginx-port
              containerPort: 80
